	- Isaac.SetCurrentFloorBackdrop(backdropid): changes the default backdrop for the current floor(will reset after you leave the floor).
	- Isaac.SetCurrentFloorName(string): changes the stage name for the current floor(will reset after you leave the floor).
	- Isaac.GetCurrentStageConfigId(): returns the stagesid from the stages xml for the current floor.
* Familiar :
	- RemoveFromPlayer
	- CanBlockProjectiles
	- CanBeDamagedByProjectiles
	- CanBeDamagedByEnemies
	- CanBeDamagedByLasers
* EntityNPC :
	- GetDarkRedChampionRegenTimer
* EntityBomb:
	- GetRocketAngle / SetRocketAngle
	- GetRocketSpeed / SetRocketSpeed
* EntityPlayer:
	- GetUrnSouls
* EntitiesSaveStateVector:
	- Clear
* Minimap :
	- SetState
	- SetHoldTime
* EntityConfig:
	- Added EntityConfig.GetBaby(i) and EntityConfig.GetMaxBabyID(), as well as the corresponding EntityConfigBaby class (its co-op babies).
* XMLData :
	- XMLData.GetEntryByOrder: gets entries in the order they appear on the xmls.
* Callbacks :
	- MC_POST_NPC_DARK_RED_CHAMPION_REGEN: Called right after a dark red champion regenerates out of goo form
	- MC_POST_ACHIEVEMENT_UNLOCK: Called after an achievement is unlocked, has the achievement id as its param
	- MC_PRE/POST_MINIMAP_UPDATE: Called right before or right after the minimap is updated
	- MC_PRE/POST_MINIMAP_RENDER: Called right before or right after the minimap is rendered
  	- MC_PRE/POST_PLAYER_ADD_HEARTS(EntityPlayer Player, int Amount, AddHealthType AddHealthType, bool OptionalArg): Called when hearts are added to the player, allows changing the added amount of hearts.
	- MC_POST_RENDER_PLAYER_HEAD/BODY we had the pre but not the post. Same args as the pre, but with the updated vector if its changed on pre
	- MC_POST_PLAYERHUD_ACTIVE_ITEM now has an additional "ChargeBarOffset" arg (the screen position where the charge bar would be rendered)
* ImGui :
	- Now supports multiline input. Use CTRL + Enter for a newline. Useful for pasting Lua scripts or making fortunes.