@@ -18,6 +18,7 @@ void PatchModMenu_Font(const char* sig) {
 void ASMPatchModsMenu() {
 	PatchModMenu_Font("e8????????393b");
 	PatchModMenu_Font("e8????????8b95????????8bfb");
+	PatchModMenu_Font("e8????????8d43??3907");
 }
 void ASMPatchMenuOptionsLanguageChange() {
 	// before lua reset in MenuOptions::Update
